integrates\fix(front): #2373 allow words to wrap
Closes #2373


Former-commit-id: 98c9432e8828bf93504db7fa178ce7436c4ad214

--- a/front/src/scenes/Dashboard/components/EvidenceImage/index.css
+++ b/front/src/scenes/Dashboard/components/EvidenceImage/index.css
@@ -40,4 +40,5 @@
 :local .description {
   padding: 20px 20px 15px;
   border-top: 1px solid #DDDDDD;
+  word-break: break-word;
 }
